# spop

./: .gitignore  .justfile  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  haproxy.cfg  spoe-test.conf  varint.c
.github/workflows/: deploy.yml  test.yml
examples/: agent.rs  agent_socket.rs  agent_tcp.rs
src/: actions.rs  codec.rs  debug.sh  frame.rs  lib.rs  parser.rs  serialize.rs  types.rs  varint.rs
src/frames/: ack.rs  agent_disconnect.rs  agent_hello.rs  capabilities.rs  haproxy_disconnect.rs  haproxy_hello.rs  mod.rs  notify.rs
