[package]
name = "spop"
version = "0.4.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Library for parsing HAProxy SPOP (Stream Processing Offload Protocol)"
documentation = "https://docs.rs/spop/latest/spop/"
repository = "https://github.com/nbari/spop"
readme = "README.md"
keywords = ["haproxy", "spop", "spoe"]
categories = ["network-programming"]
license = "BSD-3-Clause"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
hex = "0.4.3"
nom = "8.0"
tokio = { version = "1.44", features = ["full"] }

[lib]
name = "spop"
path = "src/lib.rs"

[[example]]
name = "agent"
path = "examples/agent.rs"
